add_subdirectory(polygons)
add_subdirectory(primitives)

#add_subdirectory(interleaved-primitives)
#add_subdirectory(geometry-shader)

add_subdirectory(instanced)
add_subdirectory(fluidsimulation3d)

#add_subdirectory(multi-texture)

#add_subdirectory(mesh-visualizer)
#add_subdirectory(transformations)
#add_subdirectory(mesh)

#add_subdirectory(buffer-mapping)
